tests/snapshots/render_dashboard__pane_014_role_name_badge_off.snap
---
source: tests/render_dashboard.rs
expression: buffer_to_color_text(&off)
---
[Green/Reset]"┌" [Reset/Reset]" 1 " [Green/Reset]"──────────────────────────────────────────────────────────────── ● Working ┐"
[Green/Reset]"│" [LightRed/Reset]"example-coder" [Green/Reset]"│"
[Green/Reset]"│" [Reset/Reset]"Dir:  workspace                                                               " [Green/Reset]"│"
[Green/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Green/Reset]"│"
[Green/Reset]"│" [Green/Reset]"│"
[Green/Reset]"│" [Green/Reset]"│"
[Green/Reset]"│" [Green/Reset]"│"
[Green/Reset]"│" [Green/Reset]"│"
[Green/Reset]"└──────────────────────────────────────────────────────────" [Reset/Reset]" Last: 0s  Tools: 0 " [Green/Reset]"┘"
